--- a/linux-systemd/minio.service
+++ b/linux-systemd/minio.service
@@ -14,7 +14,7 @@ ProtectProc=invisible
 
 EnvironmentFile=/etc/default/minio
 ExecStartPre=/bin/bash -c "if [ -z \"${MINIO_VOLUMES}\" ]; then echo \"Variable MINIO_VOLUMES not set in /etc/default/minio\"; exit 1; fi"
-ExecStart=/usr/local/bin/minio server $MINIO_OPTS $MINIO_VOLUMES
+ExecStart=/usr/local/bin/minio gateway opfs $MINIO_VOLUMES $MINIO_OPTS
 
 # Let systemd restart this service always
 Restart=always
